<resources>
    <string name="app_name">Sling</string>
    <!--    Login String values-->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="or_text">Or</string>
    <string name="forgot_password">Forgot password</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="web_client_id">994818492886-ogtk578dvhi1kjmbsh3jvivqauht4k9b.apps.googleusercontent.com</string>
    <string name="email_not_found">Email not registered</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="profile_type">Select profile type</string>
    <string name="hey_there">Hey there,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="invalid_user">Check your Email or password</string>
    <string name="next">Next</string>
    <string name="name_of_organisation">Name of organisation</string>
    <string name="organisation_e_mail">Organisation e-mail</string>
    <string name="type_of_org">Type of org.</string>
    <string name="address_of_org">Address of org.</string>
    <string name="country">Country</string>
    <string name="pin_code">Pin code</string>
    <string name="organisation_code">Organisation Code</string>
    <string name="your_name">Your name</string>
    <string name="your_e_mail">Your e-mail</string>
    <string name="designation">Designation</string>
    <string name="primary_subject_s">Primary Subject/s</string>
    <string name="mentor_s_code">Mentor\'s code</string>
    <string name="current_std">Current std</string>
    <string name="course">Course</string>
    <string name="invalid_email">Enter a valid Email</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="incorrect_password">Passwords don\'t match</string>
    <string name="check">Check</string>
    <string name="rooms">Rooms</string>
    <string name="mentor">Mentors</string>
    <string name="mentee">Mentees</string>
    <string name="your_assignments">Your assignments</string>
    <string name="title_mentors">Mentors</string>
    <string name="title_classes">Classes</string>
    <string name="title_rooms">Rooms</string>
    <string name="empty_organisation">Oops! No one has joined using your\n organisation code</string>
    <string name="no_classroom_created">You haven\'t created any classroom yet.</string>
    <string name="invalid_joining_code">Invalid joining code</string>
    <string-array name="user_type">
        <item>Organisation</item>
        <item>Mentor</item>
        <item>Individual</item>
    </string-array>

    <!--    organisation-->
    <string-array name="organisation_type">
        <item>Public</item>
        <item>Private</item>
        <item>Other</item>
    </string-array>
</resources>