<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Ashish Yadav <mailtoashish693@gmail.com>
  ~
  ~ This program is free software; you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3 of the License, or (at your option) any later
  ~ version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  ~ PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:src="@drawable/leaves"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/or_text" />

  <LinearLayout
      android:id="@+id/hello_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="25dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_there"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:fontFamily="@font/alata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  </LinearLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_input_text_layout"
      app:boxCornerRadiusTopEnd="20dp"
      app:boxStrokeWidth="0dp"
      app:boxStrokeWidthFocused="0dp"
      app:boxCornerRadiusBottomEnd="20dp"
      app:boxCornerRadiusBottomStart="20dp"
      app:boxCornerRadiusTopStart="20dp"
      style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="50dp"
      app:startIconDrawable="@drawable/ic_email_24"
      app:endIconMode="clear_text"
      android:hint="@string/email_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/hello_text">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxLength="50"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_input_text_layout"
      app:boxCornerRadiusTopEnd="20dp"
      app:boxStrokeWidth="0dp"
      app:boxStrokeWidthFocused="0dp"
      app:boxCornerRadiusBottomEnd="20dp"
      app:boxCornerRadiusBottomStart="20dp"
      app:boxCornerRadiusTopStart="20dp"
      style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:hint="@string/password_label"
      app:endIconMode="password_toggle"
      android:layout_marginTop="10dp"
      app:startIconDrawable="@drawable/ic_key_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/email_input_text_layout">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="18"
        android:singleLine="true"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="38dp"
      android:text="@string/login"
      android:textSize="16sp"
      app:cornerRadius="12dp"
      android:textAllCaps="false"

      android:gravity="center"
      app:icon="@drawable/ic_login_24"
      app:iconGravity="textStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/password_input_text_layout"
      app:strokeWidth="0.7dp" />

  <LinearLayout
      android:id="@+id/extra_action_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="12dp"
      app:layout_constraintTop_toBottomOf="@id/login_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/action_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_weight="1"
        android:layout_gravity="start"
        android:text="@string/forgot_password"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/action_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_weight="1"
        android:text="@string/new_user_sign_up"/>

  </LinearLayout>

  <TextView
      android:id="@+id/or_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="14dp"
      android:gravity="center"
      android:text="@string/or_text"
      android:textStyle="bold"
      android:textSize="14sp"
      app:layout_constraintTop_toBottomOf="@id/extra_action_layout"/>

  <LinearLayout
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="20dp"
      android:contextClickable="true"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/or_text">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/action_google_sign_in"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_google"/>

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/action_google_sign_in"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:gravity="center"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/sign_in_with_google"/>-->

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>